# office-claw

./: .gitignore  Design.md  FAIL_REPORT.md  LICENSE  MILESTONE_SIGN_OFF.md  README.md  README_CN.md  office-claw-up.sh  wasi_snapshot_preview1.wasm
containers/agent/: Dockerfile
core/: package-lock.json  package.json  vitest.config.ts
core/src/: container-manager.js  gateway.ts  index.js  pipeline.ts  privacy-router.js  types.ts  vault.ts
core/src/mocks/: fleet.ts  privacy.ts  security.ts
core/tests/: checkpoint2-test.js  checkpoint3-test.js  checkpoint5-test.js  onion-core.test.ts  quality-gate.test.ts
design_doc/: Design.md  Stage1_QualityGate.md  Stage2_OnionCore.md
governance/audits/: M1_IntentAudit.md  M2_IntentAudit.md
governance/signoffs/: M1_SignOff.md  M2_SignOff.md
prompts/tasks/: 20260322-01-project-init.md  20260322-02-arch-deep-dive.md  20260322-03-quality-gate-infra.md  20260322-04-m1-signoff.md  20260322-05-stage2-design-deep-dive.md  20260322-06-core-gateway-implementation.md  20260322-07-m2-signoff.md
scripts/: check-budget.sh  test-and-report.sh
security/: Cargo.toml  package.json
security/src/: capabilities.rs  error.rs  lib.rs  limits.rs  loader.rs  runtime.rs  wrapper.rs
security/wit/: tool.wit
skills/summarizer/: Cargo.toml
skills/summarizer/src/: bindings.rs  lib.rs
skills/summarizer/wit/: world.wit
