[package]
name = "summarizer"
version = "0.1.0"
edition = "2024"

[dependencies]
wit-bindgen-rt = { version = "0.44.0", features = ["bitflags"] }
serde_json = "1"

[lib]
crate-type = ["cdylib"]

[package.metadata.component]
package = "office-claw:summarizer"

[package.metadata.component.target]
path = "wit/tool.wit"
world = "sandboxed-tool"
